ipsvd 0.9.3
Wed, 02 Jun 2004 19:27:13 +0000
  * sslio.c: end network connection when seeing eof from prog; adapt some
    verbose log messages.
  * doc/install.html, Makefile: use matrixssl-1-1 with sslio.

ipsvd 0.9.2
Sat, 15 May 2004 14:11:54 +0000
  * doc/examples.html: use html named entities; minor.
  * man/sslio.8: clarify that chroot is done before keys are read (thx
    Charlie Brady).
  * sslio.c: include <sys/types.h>; ignore sig_pipe, catch sig_term; send
    ssl close alert on end of connection, and fatal errors.
  * use matrixssl-1-0-2.

ipsvd 0.9.1
Mon, 03 May 2004 17:08:41 +0000
  * Makefile, sslio.c: fix build failure due to broken header include (thx
    Charlie Brady).
  * doc/benefits.html: minor.

ipsvd 0.9.0
Sat, 01 May 2004 14:29:26 +0000
  * src/print-cc.sh, src/print-ld.sh: head -1 -> head -n1 (thx Richard A
    Downing).
  * sslio.c, man/sslio.8: new sslio program for Linux.
  * Makefile.matrixssl: new; conditionally build static library.
  * doc/benefits.html: new; some ipsvd's benefits.
  * package/check: run program testing process.
  * doc/examples.html: add sslio bincimaps, sslio fnord.
  * doc/index.html, doc/install.html: adapt.
  * package/compile, package/upgrade: conditionally build, install sslio.
  * package/install: run package/check.

ipsvd 0.8.2
Mon, 23 Feb 2004 20:15:29 +0000
  * man/ipsvd-instruct.5: on C0[:msg] per host concurrency is disabled (thx
    Charlie Brady).
  * ipsvd_fmt.c: fix bug in parsing phcc message not ending with escaped
    character.
  * check-tcpsvd.c, check-udpsvd.c, check-ipsvd-cdb.c: new.
  * ipsvd-cdb.check: don't echo \; use check-ipsvd-cdb.
  * tcpsvd.check: use check-tcpsvd.
  * udpsvd.check: use check-udpsvd.
  * tcpsvd.dist, udpsvd.dist, ipsvd-cdb.dist: adapt.

ipsvd 0.8.1
Sun, 22 Feb 2004 14:40:31 +0000
  * udpsvd: fix usage information output.
  * doc/upgrade.html: typo.
  * check-diff, check-dist, check-local: new; run checks on programs.