@@ -38,7 +38,7 @@ into a <a href="http://cr.yp.to/cdb.html">constant data base</a> for faster
 lookup.
 <p>
 Based on <i>ipsvd</i>'s client-based
-<a href="ipsvd-instruct.7.html">instructions</a>, the process state of the
+<a href="ipsvd-instruct.5.html">instructions</a>, the process state of the
 server program can be altered, the per-client concurrency can be adjusted,
 connections can be denied, and even a completely different server program
 can be started for special clients, see some
@@ -48,7 +48,7 @@ Clients are identified by their IP address and through IP address ranges, by
 the fully qualified domain name the client's IP address reverse-resolves
 and parts if it, and by host names currently resolving to the client's IP
 address (to identify clients through dynamic DNS names), see
-<a href="ipsvd-instruct.7.html">ipsvd instructions</a> for details.
+<a href="ipsvd-instruct.5.html">ipsvd instructions</a> for details.
 <hr>
 <a name="libdjbdns"><h3>Secure DNS client library</h3></a>
 The <i>ipsvd</i> programs use the
