@@ -148,7 +148,7 @@ By default
 .I msg
 is empty.
 See
-.BR ipsvd-instruct (7)
+.BR ipsvd-instruct (5)
 for supported escape sequences in
 .IR msg .
 
